# playwright-python-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
features/AutomationExercise/: ecommerce.feature
features/RickAndMorty/: rickandmorty_api.feature
features/automation_exercise/: user_management.feature
features/rick_and_morty/: rickandmorty_ui.feature
pages/: results.py  search.py
pages/AutomationExercise/: account_confirmation.py  cart.py  checkout.py  homepage.py  login.py  modal.py  payment.py  product_details.py  products.py  signup.py
pages/DuckDuckGo/: search.py
pages/RickAndMorty/: about.py  api.py  documentation.py  homepage.py
pages/automation_exercise/: __init__.py  account_confirmation.py  checkout.py  homepage.py  login.py  modal.py  product_details.py  products.py  signup.py
pages/rick_and_morty/: __init__.py  about.py  api.py  homepage.py
step_defs/: __init__.py
step_defs/AutomationExercise/: ecommerce_steps.py  navigation_steps.py  user_management_steps.py
step_defs/RickAndMorty/: api_steps.py  character_steps.py  navigation_steps.py
step_defs/automation_exercise/: __init__.py  ecommerce_steps.py  navigation_steps.py  user_management_steps.py
step_defs/rick_and_morty/: __init__.py  api_steps.py  character_steps.py  navigation_steps.py
tests/: conftest.py  test_automation_exercise.py  test_morty.py  test_rick_and_morty.py  test_rick_and_morty_api.py  test_search.py
tests/AutomationExercise/: test_exercise_ui.py
tests/DuckDuckGo/: test_search.py
tests/RickAndMorty/: test_morty.py  test_morty_api.py
