[tool.poetry]
name = "playwright-python-project"
version = "0.1.0"
description = "Sample UI & API test project using python, playwright and pytest"
authors = ["jacob-mecoy <jacob.mecoy@gmail.com>"]
readme = "README.md"
# Define package structure
package-mode = false

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poetry.dependencies]
python = ">=3.13"
certifi = "2025.4.26"
charset-normalizer = "3.4.2"
colorama = "0.4.6"
gherkin-official = "29.0.0"
greenlet = ">=3.1.1,<4.0.0"
idna = "3.10"
iniconfig = "2.1.0"
mako = "1.3.10"
markupsafe = "3.0.2"
packaging = "25.0"
parse = "1.20.2"
parse-type = "0.6.4"
playwright = ">=1.52.0,<2.0.0"
pluggy = "1.6.0"
pyee = "13.0.0"
pytest = "8.3.5"
pytest-base-url = "2.1.0"
pytest-bdd = "8.1.0"
pytest-playwright = "0.7.0"
python-dotenv = "1.1.0"
python-slugify = "8.0.4"
requests = "2.32.3"
ruff = "0.12.9"
six = "1.17.0"
text-unidecode = "1.3"
typing-extensions = "4.13.2"
urllib3 = "2.4.0"
pre-commit = ">=4.5.1,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length.
line-length = 100

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore F403 in tests folder since we import all step definitions so pytest can register them
"tests/*.py" = ["F403"]