[tool.poetry]
name = "playwright-python-project"
version = "0.1.0"
description = "Sample UI & API test project using python, playwright and pytest"
authors = ["jacob-mecoy <jacob.mecoy@gmail.com>"]
readme = "README.md"
# Define package structure
package-mode = false

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poetry.dependencies]
python = ">=3.13"
certifi = "2025.4.26"
charset-normalizer = "3.4.2"
colorama = "0.4.6"
gherkin-official = "29.0.0"
greenlet = ">=3.1.1,<4.0.0"
idna = "3.10"
iniconfig = "2.1.0"
mako = "1.3.10"
markupsafe = "3.0.2"
packaging = "25.0"
parse = "1.20.2"
parse-type = "0.6.4"
playwright = ">=1.52.0,<2.0.0"
pluggy = "1.6.0"
pyee = "13.0.0"
pytest = "8.3.5"
pytest-base-url = "2.1.0"
pytest-bdd = "8.1.0"
pytest-playwright = "0.7.0"
python-dotenv = "1.1.0"
python-slugify = "8.0.4"
requests = "2.32.3"
ruff = "0.12.9"
six = "1.17.0"
text-unidecode = "1.3"
typing-extensions = "4.13.2"
urllib3 = "2.4.0"
pre-commit = ">=4.5.1,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length (appropriate for readable test code)
line-length = 100
# Target Python 3.13+
target-version = "py313"
# Show all violations, even if disabled via ignore rules
output-format = "grouped"

[tool.ruff.lint]
# Comprehensive rule selection for test quality
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (undefined names, unused imports)
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "N",      # pep8-naming (naming conventions)
    "ASYNC",  # flake8-async (async/await best practices)
    "RET",    # flake8-return (return statement best practices)
    "SIM",    # flake8-simplify (code simplification)
    "PTH",    # pathlib (use pathlib instead of os.path)
    "PERF",   # perflint (performance anti-patterns)
]

# Ignore rules that conflict with test patterns
ignore = [
    "E501",   # Line too long (handled by line-length)
    "PTH123", # open() without pathlib (often OK in tests)
    "SIM108", # Simplify if-else (can reduce readability in tests)
]

[tool.ruff.lint.per-file-ignores]
# Test-specific ignores
"tests/*.py" = [
    "F403",    # Undefined import * (pytest fixtures, BDD imports)
    "F401",    # Unused import (BDD step registration, fixtures)
]
"step_defs/**/*.py" = [
    "F401",    # Unused import (BDD decorators register functions)
    "SIM300",  # Simplify if-else (can impact readability)
]
"conftest.py" = [
    "F401",    # Unused import (pytest fixtures)
]

[tool.ruff.lint.isort]
# Proper import organization
known-first-party = ["pages", "step_defs", "features"]
known-third-party = ["playwright", "pytest", "pytest_bdd"]

[tool.ruff.lint.pep8-naming]
# Allow test-specific naming
extend-ignore-names = [
    "ae_*",    # AutomationExercise fixture/variable prefix
    "Page",    # Playwright Page class
]